--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@
         height: 100%;
         object-fit: cover;
     }
+    .ftco-navbar-light.scrolled .navbar-toggler {
+        border: none;
+        color: rgb(255 255 255 / 50%) !important;
+        border-color: rgba(0, 0, 0, 0.5) !important;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 16px;
+        letter-spacing: .1em;
+    }
 </style>
 </head>
 
