removed client names

--- a/Luxury_Retail_project.html
+++ b/Luxury_Retail_project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Retail - Data Migration & Integration | Microsoft Fabric Project</title>
+    <title>Data Migration & Integration | Microsoft Fabric Project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css\projects.css">
 </head>
@@ -18,7 +18,7 @@
                     <img src="images\retail\retail_project_background.png" alt="Luxury Retail Data Migration Project">
                     <div class="header-overlay">
                         <h1>Data Migration Transformation & Integration</h1>
-                        <p>Microsoft Fabric Implementation for Luxury Retail client</p>
+                        <p>Microsoft Fabric Implementation</p>
                     </div>
                 </div>
                 
@@ -30,10 +30,6 @@
                     <div class="meta-item">
                         <span class="meta-icon"><i class="fas fa-map-marker-alt"></i></span>
                         <span class="meta-text"><strong>Location:</strong> Mumbai, India</span>
-                    </div>
-                    <div class="meta-item">
-                        <span class="meta-icon"><i class="fas fa-building"></i></span>
-                        <span class="meta-text"><strong>Client:</strong> Capgemini (Luxury Retail client)</span>
                     </div>
                     <div class="meta-item">
                         <span class="meta-icon"><i class="fas fa-user-tie"></i></span>
