--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                             <div class="counter-wrap ftco-animate d-flex mt-md-3">
                                 <div class="text">
                                     <p class="mb-4">
-                                        <span class="number" data-number="5">0</span> <span>+</span>
+                                        <span class="number" data-number="9">0</span> <span>+</span>
                                         <span>&nbsp; Successful Projects</span>
                                     </p>
                                     <p>
@@ -854,7 +854,7 @@
                                 <span class="tag">ETL</span>
                             </div>
                         </div>
-                        <h3 class="heading"><a href="Luxury_Retail_project.html">Data Migration for Luxury Retail Client</a></h3>
+                        <h3 class="heading"><a href="Luxury_Retail_project.html">Cloud-Native Data Migration Using Microsoft Fabric</a></h3>
                         <p>Built scalable ETL pipelines in Microsoft Fabric using PySpark and SQL for data cleansing, aggregation, and enrichment. Integrated with enterprise systems and automated deployment via CI/CD.</p>
                     </div>
                 </div>
@@ -962,7 +962,7 @@
                 <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
                     <div class="block-18">
                         <div class="text">
-                            <strong class="number" data-number="5" >0</strong>
+                            <strong class="number" data-number="9" >0</strong>
                             <span>Projects Completed</span>
                         </div>
                     </div>
