uploaded degree certificates

--- a/index.html
+++ b/index.html
@@ -654,15 +654,24 @@
             
             <div class="row">
                 <div class="col-md-6">
+                    <a href="https://s8ndr-my.sharepoint.com/:i:/g/personal/shashujoshi2306_s8ndr_onmicrosoft_com/EeaJNdSia1RIoSbmr_jPawEBHv12RbireDkLB-zPGdkDvg?e=wSJfqj" 
+                        class="achievement-link" 
+                        target="_blank" 
+                        rel="noopener noreferrer">
                     <div class="resume-wrap ftco-animate">
                         <span class="date">2019 - 2022</span>
                         <h2>Bachelor of Engineering</h2>
                         <span class="position">Dr. D. Y. Patil Institute of Technology, Pune</span>
                         <p class="mt-4">Graduated with First Class Distinction</p>
                     </div>
+                    </a>
                 </div>
 
                 <div class="col-md-6">
+                    <a href="https://s8ndr-my.sharepoint.com/:i:/g/personal/shashujoshi2306_s8ndr_onmicrosoft_com/EQRDn_1fd1xHpB_xjzGB-qABRdCnb6IPlOZD8N6WNhtGRg?e=vZ3IEH" 
+                        class="achievement-link" 
+                        target="_blank" 
+                        rel="noopener noreferrer">
                     <div class="resume-wrap ftco-animate">
                         <span class="date">2016 - 2019</span>
                         <h2>Diploma in Engineering</h2>
@@ -671,6 +680,7 @@
                         <p class="mt-4">Graduated with First Class Distinction</p>
 						
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
