Add Exusia experience and update Capgemini dates in portfolio

--- a/index.html
+++ b/index.html
@@ -598,14 +598,37 @@
                 <div class="underline"></div>
             </div>
             <br>
-            
+
+<!-- Exusia a Globant Division Experience-->
             <div class="row">
                 <div class="col-md-12">
                     <div class="resume-wrap ftco-animate">
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/capg_logo.png" alt="Capgemini" style="height: 40px; margin-right: 15px;">
+                            <img src="images/exesusia.jpg" alt="Exusia" style="height: 90px; margin-right: 15px;">
                             <div>
-                                <span class="date">2022 - Present</span>
+                                <span class="date">August 2025 - Present</span>
+                                <h2 class="mb-0">Senior Data Engineer</h2>
+                                <span class="position">Exusia a Globant Division</span>
+                            </div>
+                        </div>
+                        <div class="timeline">
+                            <div class="timeline-item">
+                                <h3>Data Platform Foundation & Cloud Research</h3>
+                                <ul>
+                                    <li>Tested Microsoft Fabric with a hands-on Proof of Concept (PoC) to prepare for building new client data solutions.</li>
+                                    <li>Researched Snowflake upscaling concepts to understand how to best manage performance and costs in cloud data warehouses.</li>
+                                    <li>Studied for the DP-700 Microsoft Fabric certification to quickly gain required expertise and follow industry best practices.</li>
+                                    <li>Created initial documentation on Fabric data components to help the team start new projects faster.</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                   <br>
+<!-- Capgemini experience -->
+                        <div class="d-flex align-items-center mb-4">
+                            <img src="images/capg_logo.png" alt="Capgemini" style="height: 90px; margin-right: 15px;">
+                            <div>
+                                <span class="date">October 2022 - August 2025</span>
                                 <h2 class="mb-0">Senior Data Engineer</h2>
                                 <span class="position">Capgemini</span>
                             </div>
