Update dp-700 certification titles and links in portfolio

--- a/index.html
+++ b/index.html
@@ -749,8 +749,8 @@
                         <div class="achievement-image">
                             <img src="images\certifications\dp600.png" alt="Fabric Data Engineer Certified" class="img-fluid certification-img">
                         </div>
-                        <h3>Fabric Data Engineer Certified</h3>
-                        <p>Earned Microsoft Certified: Fabric Data Engineer Associate certification, validating expertise in designing and implementing data solutions on MS Fabric.</p>
+                        <h3>Fabric Analytics Engineer Associate Certified</h3>
+                        <p>Earned Microsoft Certified: Fabric Analytics Engineer Associate certification, validating expertise in designing and implementing data solutions on MS Fabric.</p>
                     </div>
                     </a>
                 </div>
@@ -830,7 +830,7 @@
            <div class="row">  
             <div class="col-md-4 ftco-animate mb-4">
                     <div class="achievement-card">
-                        <a href="https://verify.skilljar.com/c/dxbe39qcj9cu" 
+                        <a href="https://learn.microsoft.com/en-us/users/shashankjoshi-4569/credentials/D0EA870494AFC55B?ref=https%3A%2F%2Fwww.linkedin.com%2F" 
                         class="achievement-link" 
                         target="_blank" 
                         rel="noopener noreferrer">
@@ -838,7 +838,7 @@
                             <img src="images\certifications\DP-700.png" alt="Fabric Data Engineer Associate Certification" class="img-fluid certification-img">
                         </div>
                         <h3>Fabric Data Engineer Associate</h3>
-                        <p>In progress: Microsoft Fabric Data Engineer Associate certification, focusing on validating practical skills in Fabric data solution design and implementation.</p>
+                        <p>Earned Microsoft Certified: Microsoft Fabric Data Engineer Associate certification, focusing on validating practical skills in Fabric data solution design and implementation.</p>
                         </a>
                     </div>
                 </div>
